<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/opportunity_toolbar"
        style="@style/ToolbarHeader"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <ImageView
            android:id="@+id/rover_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/ic_opportunity"
            app:layout_constraintStart_toStartOf="@+id/opportunity_toolbar"
            app:layout_constraintTop_toTopOf="@+id/opportunity_toolbar"
            app:tint="@color/primary_01" />

        <TextView
            android:id="@+id/rover_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:textColor="@color/text"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/opportunity_toolbar"
            app:layout_constraintStart_toStartOf="@+id/opportunity_toolbar"
            app:layout_constraintTop_toTopOf="@+id/opportunity_toolbar"
            tools:text="Rover name" />

    </com.google.android.material.appbar.MaterialToolbar>

    <ProgressBar
        android:id="@+id/opportunity_photo_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminateTint="@color/primary_01"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/opportunity_recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/low_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/opportunity_toolbar" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/low_line"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="42dp" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/previous_arrow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/neutral_02"
        android:src="@drawable/left_arrow"
        android:tint="@color/text"
        app:layout_constraintEnd_toStartOf="@+id/next_arrow"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/low_line" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/next_arrow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/neutral_02"
        android:src="@drawable/right_arrow"
        android:tint="@color/text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/previous_arrow"
        app:layout_constraintTop_toBottomOf="@+id/low_line" />


</androidx.constraintlayout.widget.ConstraintLayout>